# PedestrianDetector

./: CMakeLists.txt  README.md
data/: Ze.txt  configuration.xml  test.avi
include/: CompressiveTracker.h  pedDetector.hpp
src/: CompressiveTracker.cpp  chnsPyramid.cpp  main.cpp  pedDetector.cpp
